kubernetes/apps/webdev/ws-broadcast/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ws-broadcast
    app.kubernetes.io/instance: ws-broadcast
    app.kubernetes.io/name: ws-broadcast
  name: ws-broadcast
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ws-broadcast
  template:
    metadata:
      labels:
        app: ws-broadcast
        app.kubernetes.io/name: ws-broadcast
    spec:
      containers:
      - image: hprivakos/ws-broadcast:latest
        name: ws-broadcast
        resources:
          limits:
            memory: 128Mi
            cpu: 50m
        ports:
        - containerPort: 13370
          hostPort: 13370
          protocol: TCP
