kubernetes/apps/webdev/ws-broadcast/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ws-broadcast
  name: ws-broadcast
spec:
  ports:
  - name: "web"
    port: 13370
    targetPort: 13370
  selector:
    app: ws-broadcast
