kubernetes/apps/webdev/ws-broadcast/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ws-broadcast
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`games.f9.casa`) && PathPrefix(`/ws`)
      kind: Rule
      services:
        - name: ws-broadcast
          port: 13370
      middlewares:
        - name: default-headers
          namespace: traefik
